# image-gif

./: .gitignore  .travis.yml  Cargo.toml  Changes.md  README.md  clippy.toml
.github/workflows/: rust.yml
benches/: decode.rs  decoding_benchmark.rs  encode.rs  rgb_frame.rs
examples/: check.rs  explode.rs  parallel.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs
gif-afl/: Cargo.toml  run_fuzzer.sh
gif-afl/src/: main.rs
gif-c/: Cargo.toml  build.rs  rgif.h
gif-c/src/: c_api_utils.rs  lib.rs  reader.rs
src/: c_api.rs  c_api_utils.rs  common.rs  encoder.rs  lib.rs  traits.rs  util.rs
src/reader/: converter.rs  decoder.rs  mod.rs
tests/: check_testimages.rs  crashtest.rs  decode.rs  encode.rs  results.txt  roundtrip.rs  stall.rs
