[package]
name = "gif"
license = "MIT/Apache-2.0"
version = "0.12.0"
description = "GIF de- and encoder"
authors = ["The image-rs Developers"]
readme = "README.md"
homepage = "https://github.com/image-rs/image-gif"
repository = "https://github.com/image-rs/image-gif"
documentation = "https://docs.rs/gif"
edition = "2018"

exclude = [
    "tests/crashtest/*",
    "tests/samples/*",
    "benches/*.gif",
    "gif-afl/*",
]

[dependencies]
weezl = "0.1.5"
color_quant = { version = "1.0", optional = true }

[dev-dependencies]
glob = "0.3"
criterion = "0.3.1"
png = "0.17.2"

[features]
default = ["raii_no_panic", "std", "color_quant"]
raii_no_panic = []
# Reservation for a feature turning off std
std = []

[[test]]
name = "check_testimages"
required-features = ["std"]

[[test]]
name = "crashtest"
required-features = ["std"]

[[test]]
name = "decode"
required-features = ["std"]

[[test]]
name = "stall"
required-features = ["std"]

[[test]]
name = "roundtrip"
required-features = ["std"]

[[bench]]
name = "decode"
harness = false
required-features = ["std"]

[[bench]]
name = "rgb_frame"
harness = false
required-features = ["std, color_quant"]
